--- a/style.css
+++ b/style.css
@@ -1,108 +1,115 @@
 body {
-    margin: 0;
-    font-family: SoDoSans,Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-weight: 400;
-    color: rgba(0,0,0,.87);
+  margin: 0;
+  font-family: SoDoSans, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.87);
 }
 
 header {
-    height: 101px;
-    box-shadow: 0 1px 3px rgba(0,0,0,.1),0 2px 2px rgba(0,0,0,.06),0 0 2px rgba(0,0,0,.07);
-    
+  height: 101px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.06),
+    0 0 2px rgba(0, 0, 0, 0.07);
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .header-container {
-    max-width: 1440px;
-    margin: 0 auto;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
+  max-width: 1440px;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo {
-    height: 49.4px;
-    width: 49.4px;
+  height: 49.4px;
+  width: 49.4px;
 }
 
 .logo img {
-    height: 100%;
+  height: 100%;
 }
 
 .left-nav {
-    display: flex;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .left-nav nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
 }
 
 .left-nav nav ul li {
-    padding-left: 24px;
-    text-transform: uppercase;
-    font-weight: 800;
-    letter-spacing: 0.1em;
-    cursor: pointer;
-    transition: all .2s ease;
+  padding-left: 24px;
+  text-transform: uppercase;
+  font-family: SoDoSans, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 600;
+  letter-spacing: -0.01em;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  font-size: 16px;
+  line-height: 1.5;
+  height: 100%;
 }
 .left-nav nav ul li:hover {
-    color: #008248;
+  color: #008248;
 }
 
 .right-nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .find-store {
-    display: flex;
-    align-items: center;
-    margin-right: 40px;
-    font-weight: 600;
-    transition: all .2s ease;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-right: 40px;
+  font-weight: 800;
+  transition: all 0.2s ease;
+  cursor: pointer;
+  font-size: 12px;
 }
 
 .find-store i {
-    padding-right: 8px;
-    font-size: 24px;
-    
+  padding-right: 8px;
+  font-size: 22px;
 }
 
 .find-store:hover {
-    color: #008248;
+  color: #008248;
 }
 
-.sign-in, .join-now {
-    padding: 7px 16px;
-    border: 1px solid;
-    border-radius: 50px;
-    font-weight: 600;
-    line-height: 1.2;
-    cursor: pointer;
+.sign-in,
+.join-now {
+  padding: 7px 16px;
+  border: 1px solid;
+  border-radius: 50px;
+  font-weight: 600;
+  line-height: 1.2;
+  cursor: pointer;
+  font-size: 14px;
 }
 
 .sign-in {
-    margin: 16px;
+  margin: 16px;
 }
 
 sign-in:hover {
-    background-color: rgba(0,0,0,.06);
-    transition: all .2s ease;
-
+  background-color: rgba(0, 0, 0, 0.06);
+  transition: all 0.2s ease;
 }
 
 .join-now {
-    background-color: black;
-    color: wheat;
-    transition: all .2s ease;
+  background-color: black;
+  color: white;
+  transition: all 0.2s ease;
 }
 
 .join-now:hover {
-    background-color: rgba(0,0,0,.7);
-    border-color: rgba(0,0,0,.7);
+  background-color: rgba(0, 0, 0, 0.7);
+  border-color: rgba(0, 0, 0, 0.7);
 }
