--- a/style.css
+++ b/style.css
@@ -5,10 +5,16 @@ body {
   color: rgba(0, 0, 0, 0.87);
 }
 
+a {
+  color: black;
+}
+
 header {
   height: 101px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.06),
     0 0 2px rgba(0, 0, 0, 0.07);
+  z-index: 10;
+  position: relative;
   padding-left: 40px;
   padding-right: 40px;
 }
