--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
     background-color: #d8e8e3;
     justify-content: center;
     display: flex;
+    margin-bottom: 32px;
 }
 
 .announcements span {
@@ -17,4 +18,70 @@
     font-size: 22px;
     line-height: 1.75;
     font-weight: 500;
+}
+
+.left-right-section {
+    display: flex;
+    margin-bottom: 32px;
+}
+
+.left-right-section .text {
+    display: flex;
+    width: 50%;
+    color: #1e3932;
+    padding: 32px 48px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f1f8f6;
+}
+.left-right-section .image {
+    width: 50%;
+    display: flex;
+}
+
+.left-right-section .image img {
+    width: 100%;
+}
+.text h1, .text h3 {
+    margin: 0;
+    font-weight: 400;
+    margin-bottom: 24px;
+    text-align: center;
+}
+.text h3{
+    margin-bottom: 32px;
+    font-size: 19px;
+    text-align: center;
+}
+.text .cta {
+    padding: 7px 16px;
+    border: 1px solid;
+    border-radius: 50px;
+    color: #1e3932;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+.text .cta:hover {
+    padding: 7px 32px;
+    background-color: rgba(30,57,50,.1);
+}
+.chill .text {
+    background-color: #f2f0eb;
+}
+.chill .text h1 {
+    font-weight: 1000;
+    line-height: 1.2;
+    font-size: 51px;
+    letter-spacing: 8px;
+}
+/* bug fixing here only for root*/
+.chill .text h1:first-child {
+    margin-bottom: 0px;
+}/*fixing fineshed */
+
+.chill .text h3 {
+    font-size: 24px;
+    line-height: 1.5;
 }
