--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
   color: rgba(0, 0, 0, 0.87);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 a {
   color: black;
 }
@@ -104,8 +108,8 @@ header {
   margin: 16px;
 }
 
-sign-in:hover {
-  background-color: rgba(0, 0, 0, 0.06);
+.sign-in:hover {
+  background-color: rgba(0,0,0,.06);
   transition: all 0.2s ease;
 }
 
@@ -113,6 +117,7 @@ sign-in:hover {
   background-color: black;
   color: white;
   transition: all 0.2s ease;
+  border-color: black;
 }
 
 .join-now:hover {
