--- a/main.css
+++ b/main.css
@@ -183,3 +183,28 @@ section {
     letter-spacing: -0.16px;
     line-height: 1.75;
  }
+
+ .apply {
+    background-color: rgb(255, 255, 255);
+ }
+
+ .apply span {
+    font-size: 14px;
+    line-height: 1.8;
+    letter-spacing: -.01em;
+    font-weight: 400;
+    color:black;
+ }
+
+ .terms {
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 0;
+ }
+
+ .terms span {
+    font-size: 14px;
+    line-height: 1.8;
+    letter-spacing: -.01em;
+    font-weight: 500;
+    color:black;
+ }
